--- a/layeringConfigData/env.conf
+++ b/layeringConfigData/env.conf
@@ -1,2 +1,28 @@
 envFile = "layeringConfigData/euro.conf"
 envFile = ${?ENV_FILE}
+
+grocer_url = "https://cyclelabs.io/playground"
+grocer_url = ${?GROCER_URL}
+
+username = ${GROCER_USER}
+password = ${GROCER_PASS}
+
+loginPage {
+  emailLabel = "text:Email"
+  usernameField = "name:email_login"
+  passwordField = "xPath://input[@type='password']"
+  loginButton = "text:Login"
+}
+
+orderPage {
+  title = "text:Orders"
+  addOrderButton = "text:Add order"
+}
+
+addOrderModal {
+  title = "Add new order"
+  customerField = "name:order_customer"
+  orderNumberField = "name:order_number"
+  priceField = "name:order_price"
+  addButton = "xPath://button[text()='Add']"
+}
